Fix some spacing

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -98,7 +98,7 @@ button {
 
 footer {
   @include futura-ff;
-  margin: 50px auto 0;
+  margin: 25px auto 0;
   font-size: 24px;
   text-transform: uppercase;
 }
